--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = ststm32
 board = bluepill_f103c8
 framework = mbed
+upload_flags = -c set CPUTAPID 0x2ba01477
 lib_deps = mbed-wim/TextLCD@0.0.0+sha.111ca62e8a59
