--- a/test_lcd_arduino/platformio.ini
+++ b/test_lcd_arduino/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bluepill_f103c8]
-platform = ststm32
-board = bluepill_f103c8
-framework = mbed
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
 lib_deps = 
-	mbed-dudu941014/HCSR04@0.0.0+sha.a7680a852da3
-	mbed-wim/TextLCD@0.0.0+sha.111ca62e8a59
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	davetcc/LiquidCrystalIO@^1.4.1
