--- a/test_lcd_stm32/platformio.ini
+++ b/test_lcd_stm32/platformio.ini
@@ -8,10 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bluepill_f103c8]
+[env:genericSTM32F103C8]
 platform = ststm32
-board = bluepill_f103c8
-framework = mbed
-lib_deps = 
-	mbed-dudu941014/HCSR04@0.0.0+sha.a7680a852da3
-	mbed-wim/TextLCD@0.0.0+sha.111ca62e8a59
+board = genericSTM32F103C8
+framework = arduino
+lib_deps = arduino-libraries/LiquidCrystal@^1.0.7
